# all-in-one

./: .gitignore  CHANGELOG.md  README.md  build_exe.ps1  compare_bpm.py  compare_chords.py  delcache.ps1  pyproject.toml
docs/: 00_overview.md  01_bpm_algorithm.md  02_chord_detection.md  03_rocm_support.md  04_chord_evaluation.md  05_bpm_reference.md  06_bpm_phase3_report.md
docs/archive/: 01_key_detection_requirements.md  02_key_detection_system_design.md  03_key_detection_detailed_design.md
eval/chord_refs/: 01 - 夜に駆ける.json
plan/: 今回のスコープ外.md
src/allin1/: CLAUDE.md  analyze.py  chord_detection.py  cli.py  demix.py  demucs_runner.py  helpers.py  rocm_patch.cpu.py  rocm_patch.py  sonify.py  spectrogram.py  typings.py  visualize.py
src/allin1/models/: allinone.py  dinat.py  loaders.py
src/allin1/postprocessing/: __init__.py  helpers.py  metrical.py  tempo.py  tempo_estimation.py
