[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "allin1"
dynamic = ["version"]
description = "All-In-One Music Structure Analyzer"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = ["music", "beat", "downbeat", "tracking", "structure", "analysis", "allin1"]
authors = [
  { name = "Taejun Kim", email = "taejun@kaist.ac.kr" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "numpy",
  "librosa",
  "natten",
  "demucs",
  "hydra-core",
  "omegaconf",
  "huggingface_hub>=0.20.0",
  "matplotlib",
  "torch",
  "torchaudio",
  "torchvision",
  "rocm",
  "rocm-sdk-core",
  "rocm-sdk-devel",
  "rocm-sdk-libraries-custom",
  "rocrand",
]

[project.optional-dependencies]
train = [
  "lightning",
  "timm",
  "wandb",
  "mir_eval",
]

[project.urls]
Documentation = "https://github.com/mir-aidj/all-in-one#readme"
Issues = "https://github.com/mir-aidj/all-in-one/issues"
Source = "https://github.com/mir-aidj/all-in-one"

[project.scripts]
allin1 = "allin1.cli:main"
allin1-train = "allin1.training.train:main"
allin1-preprocess = "allin1.training.preprocess:main"

[tool.hatch.version]
path = "src/allin1/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/allin1"]

[tool.uv.sources]
torch                     = { url = "https://repo.radeon.com/rocm/windows/rocm-rel-7.2/torch-2.9.1%2Brocmsdk20260116-cp312-cp312-win_amd64.whl" }
torchaudio                = { url = "https://repo.radeon.com/rocm/windows/rocm-rel-7.2/torchaudio-2.9.1%2Brocmsdk20260116-cp312-cp312-win_amd64.whl" }
torchvision               = { url = "https://repo.radeon.com/rocm/windows/rocm-rel-7.2/torchvision-0.24.1%2Brocmsdk20260116-cp312-cp312-win_amd64.whl" }
rocm                      = { url = "https://repo.radeon.com/rocm/windows/rocm-rel-7.2/rocm-7.2.0.dev0.tar.gz" }
rocm-sdk-core             = { url = "https://repo.radeon.com/rocm/windows/rocm-rel-7.2/rocm_sdk_core-7.2.0.dev0-py3-none-win_amd64.whl" }
rocm-sdk-devel            = { url = "https://repo.radeon.com/rocm/windows/rocm-rel-7.2/rocm_sdk_devel-7.2.0.dev0-py3-none-win_amd64.whl" }
rocm-sdk-libraries-custom = { url = "https://repo.radeon.com/rocm/windows/rocm-rel-7.2/rocm_sdk_libraries_custom-7.2.0.dev0-py3-none-win_amd64.whl" }
rocrand                   = { path = "rocm_7.2_wheel/rocrand-1.0.0-py3-none-any.whl" }
